--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt_br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/logo/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" id="viewportMeta" />
     <title>Bela Tagarela</title>
   </head>
