--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/logo/logo.png" />
+    <meta name="description" content="Sistema multiplataforma de Comunicação Aumentativa e Alternativa.">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="Author" content="Edson Costa"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" id="viewportMeta" />
     <title>Bela Tagarela</title>
   </head>
